# soot-dotnet

./: .gitignore  README.md
src/: .gitignore  Soot.Dotnet.sln
src/.run/: Soot.Dotnet.Testconsole.run.xml
src/Soot.Dotnet.Decompiler/: AssemblyProvider.cs  Soot.Dotnet.Decompiler.csproj
src/Soot.Dotnet.Decompiler/Exceptions/: MemberNotExistException.cs  MethodBodyNotExistException.cs
src/Soot.Dotnet.Decompiler/Helper/: AssemblyUtils.cs  DefinitionUtils.cs  ILSpyUtils.cs  LoggerUtils.cs  MethodBodyDisassembler.cs
src/Soot.Dotnet.Decompiler/Parser/: AssemblyParser.cs  AssemblyParserEventBody.cs  AssemblyParserMethodBody.cs  AssemblyParserMethodBodySelector.cs  AssemblyParserPropertyBody.cs  AssemblyParserTypeDef.cs
src/Soot.Dotnet.Decompiler/ProtoConverter/: AttributeConverter.cs  CliByteArrayConverter.cs  EnumConverter.cs  InstructionsConverter.cs  LocalVariableConverter.cs  MemberConverter.cs  ProtoConverter.cs  TypeConverter.cs
src/Soot.Dotnet.Decompiler/Resources/: AssemblyAllTypes.proto  DotnetNativeHost.proto  IlInstructions.proto
src/Soot.Dotnet.NativeHost/: CMakeLists.txt  Main.cpp  Main.h  NativeHost.cpp  NativeHost.h  README.md  Settings.cpp  Soot.Dotnet.NativeHost.csproj  soot_dotnet_AssemblyFile.cpp
src/Soot.Dotnet.NativeHost/inc/: Settings.h  cli_byte_array.h  cli_string.h  coreclr_delegates.h  soot_dotnet_AssemblyFile.h
src/Soot.Dotnet.TestConsole/: Program.cs  Soot.Dotnet.TestConsole.csproj
src/Soot.Dotnet.TestSnippets/: Asyncc.cs  CallByRefVal.cs  Jimple.cs  Program.cs  Standards.cs  Sync.cs  TestAttributes.cs
src/Soot.Dotnet.TestSnippets/IL/: Boxing.cs  LdToken.cs  LocAlloc.cs  Switcher.cs  Try.cs
src/Soot.Dotnet.TestSnippets/Members/: Delegat.cs  Event.cs  Indexe.cs  Methods.cs  Native.cs
src/Soot.Dotnet.TestSnippets/SubPart/: SubClass.cs
src/Soot.Dotnet.TestSnippets/Types/: Enumm.cs  Generic.cs  Inherit.cs  Interfac.cs  (+2 more)
(+5 files in other folders)
